--- a/code.html
+++ b/code.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="code.css">
+  <link rel="stylesheet" href="code.css" type="text/css">
 </head>
 <body>
   <div class = "container">
